--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-    "verifyChannel": null,
-    "interfaceMessage": null,
+    "infoChannel": 701378894904819773,
+    "mainChannel": 697040461197606964,
+    "verifyChannel": 697065164062720011,
     "seasonNumber": 0,
     "seasonBegin": null,
-    "pastWinners": {},
-    "lastCategoryPage": 4
+    "pastWinners": {}
 }
