--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
     "infoChannel": 701378894904819773,
     "mainChannel": 697040461197606964,
     "verifyChannel": 697065164062720011,
-    "seasonNumber": 0,
+    "seasonNumber": null,
     "seasonBegin": null,
     "pastWinners": {}
 }
